--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,2 +1,78 @@
 // Your styles go here
+@charset "utf-8";
 
+html {
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+}
+
+.container {
+    max-width: 90%;
+    margin: 10px auto;
+    display: flex;
+    flex-flow: column nowrap;
+
+    nav{
+        display: flex;
+        background: maroon;
+        color: white;
+
+        ul {
+            display: flex;
+            flex: 1;
+            list-style: none;
+            padding: 0px;
+
+            & > li {
+                margin: 0px;
+                padding: 0px 10px;
+            }
+        }
+    }
+
+    main {
+        display: flex;
+        flex-flow: row wrap;
+    
+        & > .card {
+            width: 30%;
+            border: 1px solid lightgray;
+            padding: 10px;
+            margin: 10px;
+    
+            img {
+                width: 100%;
+            }
+    
+            .extra {
+                list-style: none;
+                display: flex;
+                padding: 10px 0px;
+                justify-content: center;
+                align-items: center;
+    
+                & > li:not(:first-child) {
+                    padding-left: 20px;
+                }
+            }
+        }
+    }
+}
+
+button.primary {
+    margin: 10px;
+    padding: 10px 20px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background: maroon;
+    color: white;
+}
